2001-12-28  Masatake YAMATO  <yamato@redhat.com>

	* input*.[ch]: bitmap_type -> at_bitmap_type.
	Use at_bitmap_init.
	
	* autotrace.c (at_bitmap_new): Use at_bitmap_init.
	(at_bitmap_init): New func.

	* bitmap.c (new_bitmap): Used at_bitmap_init.

	* bitmap.h: Almost all macro definitions 
	used macros defined in input.h.
	Include input.h.

	* input.c: Include input.h.

	* input.h: Don't include bitmap.h.
	Instead, some macro defs are moved to input.h.
	(at_bitmap_init): New function.
	(at_input_add_handler): Moved from autotrace.h.

2001-12-26  Masatake YAMATO  <yamato@redhat.com>

	* input-magick.c (magick_load_image): Use BITMAP_PLANES.

2001-12-24  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.29.

	* autotrace.[ch]: Renamed at_bitmap_new to at_bitmap_read.

	* main.c (main): Likewise.

2001-12-24  Martin Weber <martweb@gmx.net>

	* autotrace.[dsp,vcproj]: removed version.c

	* output-cgm.c: fixed a C++ issue.

	(Message-ID: <3C264E86.9948791C@gmx.net>).

2001-12-24  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.29pre1.

2001-12-23  Martin Weber <martweb@gmx.net>

	* README: updated.

	* NEWS: updated.

2001-12-24  Masatake YAMATO  <yamato@redhat.com>

	* fit.[ch] (fitted_splines): Pass width and height.
	
	* autotrace.[ch] (at_splines_write): Don't pass
	bbox. Get bbox from splines.

	* main.c (main): Don't pass width and height to 
	at_splines_write.
	
	* autotrace.h (struct _at_fitting_opts_type): Removed
	comments. Instead defined doc strings.
	(AT_DEFAULT_DPI): New def.
	(at_fitting_opts_doc): New macro.
	(struct _at_spline_list_array_type): Added height
	and width.

	* fit.c (new_fitting_opts): Remove comments.

	* main.c: used AT_DEFAULT_DPI.

	* strgicmp.c (strgnicmp): Added parentheses around
	conditions.
	(main): Added test.

	* output-fig.h: Move the defines to output-fig.c.

2001-12-23  Martin Weber <martweb@gmx.net>

	* output-cgm.c: Fix bugs.

	Message-ID: <3C25CDF4.4C0CC024@gmx.net>.
	